[package]
name = "polynomnom"
version = "0.1.0"
edition = "2021"

authors = ["Tomas Karabela <tkarabela@seznam.cz>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/tkarabela/polynomnom"

categories = ["algorithms", "science", "mathematics"]
keywords = ["polynomial", "integration"]

[dependencies]
num-traits = "0.2"
